k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remember-server
  labels:
    app: remember
    component: server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: remember
    component: server
